--------------------------------------------------------------------------------
drkns 2023-07-21 22:56:56+01:00 - build 6174

1. Preserve user-defined cursor shape if possible.

--------------------------------------------------------------------------------
drkns 2023-07-15 10:39:13+01:00 - build 6173

1. Fix a crash in prompt format parser.

2. Propagate taskbar state to the terminal.

3. Refactoring.

--------------------------------------------------------------------------------
zg 2023-07-12 22:29:50+03:00 - build 6172

1. far didn't ask to save unsaved data in editor then menu was active and the console window is closed with "X".

--------------------------------------------------------------------------------
drkns 2023-06-28 22:58:23+01:00 - build 6171

1. Continue 6170 & other highly experimental improvements in mouse processing.

--------------------------------------------------------------------------------
drkns 2023-06-27 21:47:13+01:00 - build 6170

1. Improve mouse buttons to fake macro keys translation.

--------------------------------------------------------------------------------
drkns 2023-06-27 19:58:03+01:00 - build 6169

1. Using a foreign format exclusively for the clipboard text size was probably not a good idea.
   E.g. now copying text between 6167 and 6168 is broken. Oops.

   To avoid repeating the same mistake in the future, we now have our own format ("FAR_Text_Length")
   and resort to "Notepad++ binary text length" only when our own format is not available.

2. With some magic copying text from pre-6168 should now work.
   Unfortunately, time travel is not yet discovered, so copying text into pre-6168 remains broken.

--------------------------------------------------------------------------------
zg 2023-06-26 20:55:27+03:00 - build 6168

1. correction of 4496. notepad++ expects data size in bytes including final '\0'.

--------------------------------------------------------------------------------